Debug assert in DOMSelection::containsNode when node belongs to a different tree https://bugs.webkit.org/show_bug.cgi?id=196342

Reviewed by Antti Koivisto.

Source/WebCore:

The assertion was wrong. It's possible for Range::compareBoundaryPoints to return WRONG_DOCUMENT_ERR
when the node and the start container belong to two different trees.

Return false in such a case for now since it's unclear (unspecified) what these methods on Selection
should do with respect to shadow trees, preserving the current behavior of release builds.

Test: editing/selection/containsNode-with-no-common-ancestor.html

* page/DOMSelection.cpp:
(WebCore::DOMSelection::containsNode const):

LayoutTests:

Added a regression test to catch the debug assertion failure. The test always passed in release builds.

* editing/selection/containsNode-with-no-common-ancestor-expected.txt: Added.
* editing/selection/containsNode-with-no-common-ancestor.html: Added.


Canonical link: https://commits.webkit.org/210641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243621 268f45cc-cd09-0410-ab3c-d52691b4dbfc